@@ -174,3 +174,4 @@
  14-Oct-2019  V0.79 Add test cases and fix exceptions for missing sequence difference details.
  14-Oct-2019  V0.80 Fix linting issue and update documentation in configuration example file -
  16-Oct-2019  V0.81 Filter reference sequence assignments marked as self-reference - added tests for GO Id consistency
+ 17-Oct-2019  V0.82 Preserve annotations on self-referenced sequences for now/shift ATC depth
